--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -3,7 +3,8 @@
     --bg-color: #f4f4f4;
     --primary-color-base: 40, 67, 137;
     --primary-base: rgb(var(--primary-color-base));
-    --primary-color: #284389;
+    // --primary-color: #284389;
+    --primary-color: #0b72af;
     --secondary-color: #9d9d9d;
     --secondary2-color: #cecece;
     --head-color: #253141;
@@ -56,4 +57,3 @@
     --font-size-10: 10px;
     --font-size-9: 9px;
   }
-  
