--- a/src/app/shared/components/common-button/common-button.component.html
+++ b/src/app/shared/components/common-button/common-button.component.html
@@ -1,3 +1,3 @@
-<button mat-raised-button color="primary" [style]="{'min-width': width}" (click)="onButtonClicked()"
+<button class="primaryButton" mat-raised-button (click)="onButtonClicked()"
     [disabled]="disabled">
     <ng-content></ng-content> </button>
