--- a/src/app/shared/components/common-button/common-button.component.scss
+++ b/src/app/shared/components/common-button/common-button.component.scss
@@ -1,7 +1,19 @@
-button {
-    // &:hover {
-    //     // background-color: var(--dark-green-color);
-    // }
+@import '../../../../assets/scss/variable';
+.primaryButton {
+  background-color: var(--primary-color);
+  color: #fff;
+  border-radius: 4px;
+  padding: 7px 15px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: all 0.5s;
+  border: 1px solid var(--primary-color);
+  &:hover{
+    outline: 1px solid var(--primary-color);
+    background-color:  #fff !important;
+    color: var(--primary-color) !important;
+    box-shadow: 2px 2px 10px rgba(0 0 0 /50%);
+  }
     &.mat-button-disabled {
         opacity: 0.5;
         cursor: no-drop;
