--- a/src/app/shared/components/dialogs/add-user/add-user.component.html
+++ b/src/app/shared/components/dialogs/add-user/add-user.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="headerUserlist">
-    <h1>Add User</h1>
-    <mat-icon (click)="closeDialog()">cancel</mat-icon>
+    <h1>{{data.evetType == 'create' ? 'Add User' : 'Update user'}}</h1>
+    <mat-icon (click)="closeDialog('i am in')">cancel</mat-icon>
 </div>
 
   <form [formGroup]="addUserForm">
@@ -39,7 +39,7 @@
       [error]="getErrorValidator('gender', 'Gender')"
       (selectedId)="getGender($event)"
     ></app-common-select>
-    <app-common-select
+    <app-common-select *ngIf="data.userRole == userRoleConfig.ADMIN"
       [label]="'Select role'"
       [control]="'role'"
       [form]="addUserForm"
@@ -59,7 +59,7 @@
           </div>
       </div>
   </div>
-
-    <button mat-flat-button color="primary" (click)="createUser()">Save</button>
+  {{data | json}}
+    <button mat-flat-button color="primary" (click)="clickedfn()">{{data.evetType}}</button>
   </form>
 </div>
