--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -334,7 +334,7 @@
         }
         &:active {
           background-color: var(--primary-color);
-          color: var(--light-color);
+          color: #fff;
         }
       }
       &.onLine {
