--- a/src/app/shared/components/dialogs/add-user/add-user.component.html
+++ b/src/app/shared/components/dialogs/add-user/add-user.component.html
@@ -60,6 +60,6 @@
       </div>
   </div>
   {{data | json}}
-    <button mat-flat-button color="primary" (click)="clickedfn()">{{data.evetType}}</button>
+    <button mat-flat-button color="primary" (click)="data.updateAction()">{{data.evetType}}</button>
   </form>
 </div>
