--- a/src/app/feature/admin/components/manage-assignment/manage-assignment.component.html
+++ b/src/app/feature/admin/components/manage-assignment/manage-assignment.component.html
@@ -21,8 +21,8 @@
             </div>
             <div class="formGroup">
                 <div class="formControl">
-                    <app-common-input [control]="'status'" [type]="'status'" [label]="'Status'" [class]="'formControl'"
-                        [error]="getErrorValidator('status', 'status')" [form]="assginmentForm"></app-common-input>
+                    <app-common-input [control]="'status'" [type]="'status'" value="status" [label]="'Status'" [class]="'formControl'"
+                        [error]="getErrorValidator('status', 'status')" [form]="assginmentForm"> </app-common-input>
                 </div>
             </div>
             <!-- <div class="formGroup">
