--- a/src/app/feature/admin/components/manage-assignment/manage-assignment.component.scss
+++ b/src/app/feature/admin/components/manage-assignment/manage-assignment.component.scss
@@ -54,6 +54,9 @@ ng-scrollbar {
     min-height: auto;
     display: grid;
     grid-gap: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
     padding: 10px 30px 25px;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     position: relative;
