--- a/src/app/shared/components/common-select/common-select.component.html
+++ b/src/app/shared/components/common-select/common-select.component.html
@@ -3,7 +3,7 @@
   <mat-form-field class="d-block" appearance="outline">
     <mat-label>{{label}}</mat-label>
     <mat-select [formControlName]="control" (selectionChange)="getDropDownValue($event.value)">
-      <mat-option *ngFor="let data of List"  [value]="data.id">
+      <mat-option *ngFor="let data of List"  [value]="data.name">
         {{data.name}}
       </mat-option>
     </mat-select>
