--- a/src/app/core/authentication/components/login/login.component.html
+++ b/src/app/core/authentication/components/login/login.component.html
@@ -1,42 +1,57 @@
-<div class="container">
-  <mat-spinner *ngIf="loading"></mat-spinner>
-  <h1>Login</h1>
-  <form [formGroup]="loginForm">
-    <mat-form-field appearance="outline">
-      <!-- <mat-icon class="icon">account_box</mat-icon> -->
-      <mat-label>E-mail</mat-label>
-      <input type="email" matInput formControlName="email" />
-      <mat-error
-        *ngIf="
-          loginForm.get('email')?.hasError('email') &&
-          !loginForm.get('email')?.hasError('required')
-        "
-      >
-        Please enter a valid email address
-      </mat-error>
-      <mat-error *ngIf="loginForm.get('email')?.hasError('required')">
-        Email is required
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-      <!-- <mat-icon class="icon">lock</mat-icon> -->
-      <mat-label>Password</mat-label>
-      <input
-        [type]="showPassword ? 'text' : 'password'"
-        matInput
-        formControlName="password"
-      />
-      <mat-icon matSuffix (click)="toggleDisplayPassword()">{{
-        showPassword ? 'visibility' : 'visibility_off'
-      }}</mat-icon>
-      <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
-        Password is required
-      </mat-error>
-    </mat-form-field>
-    <button mat-flat-button color="primary" (click)="login()">Login</button>
-  </form>
-  <div class="sign-up">
-    Don't you have an account ?
-    <a [routerLink]="['/register']">Sign up</a>
+<div class="loginScreen">
+  <div class="loginWrapper">
+    <div class="loginDetails">
+      <div class="container">
+        <mat-spinner *ngIf="loading"></mat-spinner>
+          <div class="loghinForm">
+
+            <form [formGroup]="loginForm">
+              <h1 class="border-bottom-1">Login</h1>
+              <mat-form-field appearance="outline">
+                <!-- <mat-icon class="icon">account_box</mat-icon> -->
+                <mat-label>E-mail</mat-label>
+                <input type="email" matInput formControlName="email" />
+                <mat-error
+                  *ngIf="
+                    loginForm.get('email')?.hasError('email') &&
+                    !loginForm.get('email')?.hasError('required')
+                  "
+                >
+                  Please enter a valid email address
+                </mat-error>
+                <mat-error *ngIf="loginForm.get('email')?.hasError('required')">
+                  Email is required
+                </mat-error>
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <!-- <mat-icon class="icon">lock</mat-icon> -->
+                <mat-label>Password</mat-label>
+                <input
+                  [type]="showPassword ? 'text' : 'password'"
+                  matInput
+                  formControlName="password"
+                />
+                <mat-icon matSuffix (click)="toggleDisplayPassword()">{{
+                  showPassword ? 'visibility' : 'visibility_off'
+                }}</mat-icon>
+                <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
+                  Password is required
+                </mat-error>
+              </mat-form-field>
+              <button  class="primaryButton" (click)="login()">Submit</button>
+            </form>
+            <!-- <div class="sign-up">
+              <a [routerLink]="['/register']">Sign up</a>
+            </div> -->
+            <!-- <div class="loginFormImage">
+              <img src="assets/img/edu.jpg" alt="">
+            </div> -->
+          </div>
+
+          <div class="d-flex justify-content-center py-3 pt-4">
+            <a href="/regisster">Forgot passsword?</a>
+          </div>
+      </div>
+    </div>
   </div>
 </div>
