--- a/src/app/core/authentication/components/login/login.component.scss
+++ b/src/app/core/authentication/components/login/login.component.scss
@@ -1,32 +1,100 @@
-.container {
-  max-width: 650px;
-  margin: 150px auto;
-
-  mat-spinner {
+@import "../../../../shared/components/common-button/common-button.component.scss";
+.loginScreen{
+  height: 100vh;
+  width: 100%;
+  overflow-x: hidden;
+  background-image: url(../../../../../assets/img/edu.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 9;
+  &::before{
+    content: "";
     position: absolute;
-    left: calc(50% - 50px);
-    top: 35%;
-    z-index: 10;
-  }
-
-  h1 {
-    text-align: center;
-    font-size: 42px;
-    margin: 40px;
-  }
-
-  form {
+    height: 100%;
     width: 100%;
-    display: flex;
-    flex-direction: column;
+    background-color: #00000023;
+    z-index: 0;
+    backdrop-filter: blur(10px);
+  }
+  .loginWrapper{
+    // background-color: #013e6abd;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   width: 80vw;
+    margin: 0 auto;
+    z-index: 99;
+    height: 600px;
+    border-radius: 12px;
+    .loginDetails{
+      background-color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 999;
+      width: 40%;
+      height: 80%;
+      padding: 20px;
+      margin: 65px auto;
+      border-radius: 12px;
+      .container {
+        // max-width: 650px;
+        // margin: 150px auto;
 
-    mat-form-field {
-      margin: 15px 0;
+        mat-spinner {
+          position: absolute;
+          left: calc(50% - 50px);
+          top: 35%;
+          z-index: 10;
+        }
+        .loghinForm{
+          display: flex;
+          width: 100%;
+          padding: 30px 0px 0px 0px;
+          // margin-bottom: 40px;
+          form {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            // background-color: #eee;
+            // padding: 20px 40px;
+            width: 100%;
+            border-radius: 12px 0 0 12px;
+            h1 {
+              text-align: center;
+              font-size: 42px;
+              margin: 20px 20px 40px;
+              color: #013e6abd;
+              // border-bottom: 2px solid var(--primary-color);
+              // text-decoration: underline;
+              padding-bottom: 10px;
+            }
+
+            mat-form-field {
+              margin: 15px 0;
+            }
+          }
+
+          .sign-up {
+            margin: 25px 0;
+            text-align: right;
+          }
+          .loginFormImage{
+            width: 40%;
+            border-radius: 0 12px 12px 0;
+            img{
+              max-width: 100%;
+              height: 100%;
+              width: 100%;
+              border-radius: 12px ;
+            }
+          }
+        }
+
+      }
     }
   }
-
-  .sign-up {
-    margin: 25px 0;
-    text-align: right;
   }
-}
