--- a/src/app/feature/user/components/view-assignment/view-assignment.component.html
+++ b/src/app/feature/user/components/view-assignment/view-assignment.component.html
@@ -6,9 +6,9 @@
 </div>
 
 <div class="data">
-  <p><strong>Title:</strong> {{ data.element.Title }}</p>
-  <p><strong>Description:</strong> {{ data.element.Description }}</p>
-  <p><strong>Due Date:</strong> {{ data.element.DueDate }}</p>
-  <p><strong>Priority:</strong> {{ data.element.Priority }}</p>
-  <p><strong>Status:</strong> {{ data.element.Status }}</p>
+  <p><strong>Title:</strong> {{ data.data.title }}</p>
+  <p><strong>Description:</strong> {{ data.data.description }}</p>
+  <p><strong>Due Date:</strong> {{ data.data.dueDate }}</p>
+  <p><strong>Priority:</strong> {{ data.data.priority }}</p>
+  <p><strong>Status:</strong> {{ data.data.status }}</p>
 </div>
