--- a/src/app/shared/components/filter/filter.component.html
+++ b/src/app/shared/components/filter/filter.component.html
@@ -1,5 +1,5 @@
 <div class="filter">
-  <app-common-select
+  <app-common-select class="mx-2"
     [label]="firstLabel"
     [control]="firstControl"
     [form]="form"
