--- a/src/app/shared/components/layout/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/layout/components/sidebar/sidebar.component.html
@@ -25,7 +25,7 @@
     <nav class="dashboardMenu" *ngIf="role == userRoleConfig.REGULARUSER">
       <div class="dashboardLogo">
         <a [ngClass]="inputIsExpand ? 'showMain' : 'hideMain'" class="mainLogo" (click)="imageClick()"><img
-            src="./assets/img/tab-logo.png" alt="Image" /></a>
+            src="./assets/img/main-logo.png" alt="Image" /></a>
         <a [ngClass]="inputIsExpand ? 'showLogo' : 'hideLogo'" class="mainLogo" (click)="imageClick()"><img
             src="./assets/img/tab-logo.png" alt="Image" /></a>
       </div>
