--- a/src/app/feature/admin/components/user-list/user-list.component.html
+++ b/src/app/feature/admin/components/user-list/user-list.component.html
@@ -4,6 +4,6 @@
           <app-common-button (click)="createUser('create')"> + Add User</app-common-button>
         </div>
         <div class="userEvent">
-          <app-common-users-table (viewDetail)="getUserDetail($event)" (updateDetail)="updateUserDetail($event)" [label]="'No data availble.'" (deleteUser)="deleteUser($event)" [tableData]="users" [columnHeader]="columnHeader"></app-common-users-table>
+          <app-common-users-table (viewDetail)="getUserDetail($event)" (updateDetail)="updateUserDetail($event)" [label]="'No data availble.'" (deleteUser)="openDeleteUserModal($event)" [tableData]="users" [columnHeader]="columnHeader"></app-common-users-table>
         </div>
 </div>
