add user detail

--- a/src/app/shared/components/dialogs/confirm-box/confirm-box.component.html
+++ b/src/app/shared/components/dialogs/confirm-box/confirm-box.component.html
@@ -1,10 +1,11 @@
-<div class="confirmWrapper">
-  <div class="headerUserlist">
+
+<div class="">
+  <div class="headerUserlist p-3">
     <h1>Confirm</h1>
     <mat-icon (click)="closeDialog()">cancel</mat-icon>
   </div>
-  <p>Are you sure you want to perform this action?</p>
-  <div class="d-flex sumbitElement">
+  <p class="m-0 px-3 pt-3 pb-5">Are you sure you want to perform this action?</p>
+  <div class="d-flex sumbitElement p-3">
     <button class="primaryButton" (click)="closeDialog(true)">Yes</button>
     <button class="primaryButton" (click)="closeDialog(false)">No</button>
   </div>
