--- a/src/app/shared/components/dialogs/confirm-box/confirm-box.component.scss
+++ b/src/app/shared/components/dialogs/confirm-box/confirm-box.component.scss
@@ -1,6 +1,6 @@
 @import "../../../../../assets/scss/variable";
-.confirmWrapper{
-  padding: 20px;
+// .confirmWrapper{
+//   padding: 20px;
   .headerUserlist{
     display: flex;
     align-items: center;
@@ -33,4 +33,4 @@
       padding: 8px 35px !important;
     }
   }
-}
+// }
