--- a/src/app/core/authentication/components/login/login.component.html
+++ b/src/app/core/authentication/components/login/login.component.html
@@ -49,7 +49,7 @@
           </div>
 
           <div class="d-flex justify-content-center py-3 pt-4">
-            <a href="/regisster">Forgot passsword?</a>
+            <a (click)="forgotPassword()">Forgot passsword?</a>
           </div>
       </div>
     </div>
