--- a/src/app/shared/components/common-button/common-button.component.html
+++ b/src/app/shared/components/common-button/common-button.component.html
@@ -1,3 +1,3 @@
-<button class="primaryButton" mat-raised-button (click)="onButtonClicked()"
+<button class="primaryButton"  (click)="onButtonClicked()"
     [disabled]="disabled">
     <ng-content></ng-content> </button>
