implement forgot password

--- a/src/app/core/authentication/components/forgot-password/forgot-password.component.html
+++ b/src/app/core/authentication/components/forgot-password/forgot-password.component.html
@@ -1,24 +1,24 @@
 <div class="forgotWrapper">
     <div class="headerUserlist">
-      <h1>Forgot Password</h1>
-      <mat-icon (click)="closeDialog()">cancel</mat-icon>
+        <h1>Forgot Password</h1>
+        <mat-icon (click)="closeDialog()">cancel</mat-icon>
     </div>
-    
+
     <div class="formModule">
-        <p><span>Note:-</span> Enter registered email.<p></p>
-        <form>
-            <app-common-input
-            [appearance]="'fill'"
-                [control]="'email'"
-                [type]="'email'"
+        <p><span>Note:-</span> Please enter registered email.
+        <form  [formGroup]="forgotPasswordForm">
+            <app-common-input 
+                [appearance]="'fill'" 
+                [control]="'email'" 
+                [type]="'email'" 
                 [label]="'Email'"
-                [class]="'forgotInput'"
+                [class]="'forgotInput'" 
                 [error]="getErrorValidator('email', 'Email')"
-                [form]="registrationForm"
-            ></app-common-input>
+                [form]="forgotPasswordForm">
+            </app-common-input>
             <div class="submitModule">
                 <app-common-button (click)="forgot()">Submit</app-common-button>
             </div>
-          </form>
+        </form>
     </div>
 </div>
