--- a/src/app/shared/components/detail/detail.component.html
+++ b/src/app/shared/components/detail/detail.component.html
@@ -15,6 +15,6 @@
       </div>
   </div>
   <div class="d-flex sumbitElement">
-    <button class="primaryButton" (click)="closeDialog(true)">Close</button>
+    <button class="primaryButton" (click)="closeDialog(false)">Close</button>
   </div>
 </div>
