create new route for show user details and add common table for assignment listing

--- a/src/app/feature/admin/components/assignment/assignment.component.html
+++ b/src/app/feature/admin/components/assignment/assignment.component.html
@@ -1,8 +1,11 @@
 <div class="userListWrapper">
   <div class="userDetails">
-    <h3>User List</h3>
+    <h3>Assignment List</h3>
+    <app-common-button (click)="createAssignment('create')"> + Add Assignment</app-common-button>
   </div>
   <div class="userEvent">
-    <app-common-users-table (viewDetail)="getAssignmentDetail($event)" [label]="'No data availble.'" [tableData]="assignmentList" [columnHeader]="columnHeader"></app-common-users-table>
+    <app-common-users-table (viewDetail)="getAssignmentDetail($event)" (updateDetail)="updateAssignmentDetail($event)"
+      [label]="'No data availble.'" (deleteUser)="openDeleteAssignmentModal($event)" [tableData]="assignmentList"
+      [columnHeader]="columnHeader"></app-common-users-table>
   </div>
 </div>
