--- a/src/app/shared/components/dialogs/add-user/add-user.component.html
+++ b/src/app/shared/components/dialogs/add-user/add-user.component.html
@@ -39,7 +39,7 @@
       [error]="getErrorValidator('gender', 'Gender')"
       (selectedId)="getGender($event)"
     ></app-common-select>
-    <app-common-select
+    <!-- <app-common-select
     [class]="'d-none'"
       [label]="'Select role'"
       [control]="'role'"
@@ -47,7 +47,7 @@
       [List]="rolesArray"
       [error]="getErrorValidator('roles', 'Role')"
       (selectedId)="getRole($event)"
-    ></app-common-select>
+    ></app-common-select> -->
 
     <div class="group-gap">
       <div class="avatar-upload">
