--- a/src/app/shared/components/dialogs/add-user/add-user.component.html
+++ b/src/app/shared/components/dialogs/add-user/add-user.component.html
@@ -39,15 +39,24 @@
       [error]="getErrorValidator('gender', 'Gender')"
       (selectedId)="getGender($event)"
     ></app-common-select>
-    <!-- <app-common-select
-    [class]="'d-none'"
+    <app-common-select
+    [placeholder]="'Select role'"
       [label]="'Select role'"
       [control]="'role'"
       [form]="addUserForm"
       [List]="rolesArray"
       [error]="getErrorValidator('roles', 'Role')"
       (selectedId)="getRole($event)"
-    ></app-common-select> -->
+    ></app-common-select>
+    <app-common-select
+      [label]="'Select parent'"
+      [control]="'parent'"
+      [form]="addUserForm"
+      [List]="managersArray"
+      [error]="getErrorValidator('parent', 'parent')"
+      (selectedId)="getParent($event)"
+      [placeholder]="'Select Parent'"
+    ></app-common-select>
 
     <div class="group-gap">
       <div class="avatar-upload">
