--- a/src/app/feature/admin/components/user-details/user-details.component.html
+++ b/src/app/feature/admin/components/user-details/user-details.component.html
@@ -1,4 +1,3 @@
-
 <div class="detailsWrapper">
     <div class="headerUserlist">
       <h1>User Details</h1>
@@ -14,7 +13,7 @@
         </div>
     </div>
     <div class="d-flex sumbitElement">
-        <a class="text-primary cursor-pointer" *ngIf="userData.role == userRole.MANAGER" (click)="userList()">User List</a>
-        <a class="text-primary cursor-pointer" *ngIf="userData.role == userRole.REGULARUSER" (click)="assignmentList()">Assignment List</a>
+        <a class="text-primary cursor-pointer" *ngIf="userData?.role == userRole.MANAGER" (click)="userList()">User List</a>
+        <a class="text-primary cursor-pointer" *ngIf="userData?.role == userRole.REGULARUSER" (click)="assignmentList()">Assignment List</a>
       </div>
   </div>
